# sandbox-sdk

./: .gitignore  .prettierignore  AGENTS.md  APPROACHES.md  BACKGROUND_PLAN.md  BUILD_ID_PROBLEM.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  DOCKER_README.md  Dockerfile  Dockerfile.r2-snapshots  ERROR_HANDLING.md  FINAL_APPROACH.md  FIX_PORTS.md  FIX_STREAMING.md  ISSUES.md  LICENSE  MULTI_PORT_IMPLEMENTATION.md  PLAN.md  PORT_FORWARDING.md  PORT_PLAN.md  PR-204-REVIEW-REPORT.md  PR.md  PREVIEW_URLS.md  README.md  REFACTOR.md  REFACTOR_CLIENT.md  REFACTOR_SANDBOX.md  RESILIENCY-REVIEW-REPORT.md  TESTING.md  TESTING_IMPROVEMENT.md  TESTING_IMPROVEMENT_V2.md  TESTING_STRATEGY_FINAL.md  TRANSPORT.md  TURBOREPO.md  TYPES.md  UPDATES.md  biome.json  capnweb-cleanup-plan.md  (+22 more)
.changeset/: activity-timeout-guard.md  add-backup-restore-api.md  add-cloudflare-ai-gateway-support.md  add-exists-method.md  add-opencode-custom-env.md  add-opencode-integration.md  add-sandbox-extensions.md  add-wait-for-exit.md  add-write-file-stream.md  allow-app-backups.md  apache-license.md  auto-reexpose-ports-on-recovery.md  backup-bucket-endpoint.md  backup-exclude-patterns.md  backup-upload-streaming.md  bridge-custom-spans.md  bridge-exposed-port-tunnels.md  bridge-rpc-api.md  bucket-mounting.md  bump-containers-and-wrangler.md  bump-opencode-sdk.md  cache-token-validation.md  capnweb-0-8.md  (+170 more)
bridge/examples/workspace-chat/backend/: main.py  pyproject.toml
bridge/harness/: AGENTS.md  README.md  pyproject.toml
bridge/harness/script/: start
bridge/harness/src/: config.py  main.py
(+682 files in other folders)
