[project]
name = "workspace-chat-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "starlette",
    "uvicorn[standard]",
    "openai-agents[cloudflare]",
    "python-dotenv",
]

[tool.uv.sources]
openai-agents = { git = "ssh://git@github.com/OpenAI-Early-Access/openai-agents-python-preview.git", rev = "feat/sandbox-agents" }

[tool.ruff]
line-length = 100
